fix minor bugs: - change light yellow by yellow in calendar table for partial OK status; - add margin top to footer in order to fix overlap when error message is showed

--- a/app/assets/stylesheets/xifi.css
+++ b/app/assets/stylesheets/xifi.css
@@ -44,7 +44,7 @@ svg {
 .RdYlGn .q2-11{fill:rgb(244,109,67)}
 .RdYlGn .q3-11{fill:rgb(253,174,97)}
 .RdYlGn .q4-11{fill:rgb(254,224,139)}
-.RdYlGn .q5-11{fill:rgb(255,255,191)}
+.RdYlGn .q5-11{fill:rgb(252,252,14)}
 .RdYlGn .q6-11{fill:rgb(217,239,139)}
 .RdYlGn .q7-11{fill:rgb(166,217,106)}
 .RdYlGn .q8-11{fill:rgb(102,189,99)}
@@ -82,7 +82,7 @@ svg {
 }
 
 footer {
-	margin-top: 10px;
+	margin-top: 30px;
 }
 
 .layoutContainer {
@@ -373,11 +373,11 @@ padding-bottom: 10px;
 }
 .row-status-opened
 {
-	
+
 }
 .row-status-closed
 {
-	
+
 }
 .row-message
 {
@@ -660,7 +660,7 @@ input.text{ width:95%;}
     opacity: .50 !important;
     filter: Alpha(Opacity=50);
     height:1335px;
-    width:100%;  
+    width:100%;
 }
 
 .icon-required{
